[jan] Set colors per task list (Request #7480).
[cjh] Quick Add support: there is a javascript UI element for quickly adding
      tasks, and an API method (tasks/quickAdd) that provides the same
      functionality.
[jan] Add individual notification methods for single tasks (Alfonso Marín
      Marín <almarin@um.es>).


----------
v2.3.5-cvs
----------

[jan] Add missing preference for not sending update notifications to yourself
      (Joel Smith <js-horde@jk1.net>, Request #8978).
[gwr] Fix organizer field not saved in tasks (kolab/issue3888).


------
v2.3.4
------

[jan] Add and fix Oracle-specific SQL scripts.
[jan] Fix importing due date attribute from iCalendar (Bug #8644).
[jan] Fix charset when exporting tasks to iCalendar 2.0 (Bug #8637).
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>).


------
v2.3.3
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Fix synchronization with output compression enabled (Bug #7769).
[jan] Display application name as task list name when listing external tasks.
[jan] Fix importing vTodo data including more iCalendar components.


------
v2.3.2
------

[jan] Don't allow to set alarms if no due date has been set.
[cjh] Work around BC break with Horde versions before 3.2 (Bug #7820).
[cjh] Add URL access to tasks by "starts-with" search on the task name.
[cjh] Add hooks for altering the displayed task description and showing help
      text next to the task description entry field.
[cjh] Add estimated time to the fields available in the task list.
[jan] Fix link escaping in notification messages (Alfonso Marín Marín
      <almarin@um.es>, Bug #7509).


------
v2.3.1
------

[cjh] Add a PostgreSQL-specific upgrade script for 2.2 to 2.3.
[cjh] Fix fatal error when completing tasks (Bug #7400).
[mms] Upgrade prototype.js to v1.6.0.3.


----
v2.3
----

[jan] Change group field in shares table to work with LDAP groups (Bug #6883).
[jan] Log completion date if adding a completed task (Bug #7275).